# Emotive-task

./: .gitignore  README.md  docker-compose.yml  dockerfile
app/: .env.example  .mega-linter.yml  .pre-commit-config.yaml  pyproject.toml
app/api_clients/: nasa_client.py
app/take_home/: settings.py  urls.py  views.py
app/take_home/mars/: apps.py  serializers.py  urls.py  views.py
