[tool.poetry]
name = "take-home"
version = "0.1.0"
description = "Basic Django web application for take home assignment."
authors = ["Felippo Coelho"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.3"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"
pre-commit = "^3.7.0"
requests = "^2.31.0"
drf-spectacular = "^0.27.2"
pydantic = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
